# rust-starfish-wasm

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/web/: index.html
